--- a/index.html
+++ b/index.html
@@ -753,36 +753,36 @@
             </div>
             <div class="marquee__contain is--two">
               <div class="marquee-2 is--three">
-                <img src="assets/1 (1).jpeg" style="max-width: 80px" loading="lazy" alt="" class="yellow__icon" />
-                <p class="marquee-text">GM</p>
-                <img src="assets/1 (2).jpeg" style="max-width: 80px" loading="lazy" alt="" class="yellow__icon" />
-                <p class="marquee-text">GM</p>
-                <img src="assets/1 (3).jpeg" style="max-width: 80px" loading="lazy" alt="" class="yellow__icon" />
-                <p class="marquee-text">GM</p>
-                <img src="assets/1 (4).jpeg" style="max-width: 80px" loading="lazy" alt="" class="yellow__icon" />
-                <p class="marquee-text">GM</p>
-                <img src="assets/1 (5).jpeg" style="max-width: 80px" loading="lazy" alt="" class="yellow__icon" />
-                <p class="marquee-text">GM</p>
+                <img src="assets/fist.jpg" style="max-width: 80px" loading="lazy" alt="" class="yellow__icon" />
+                <p class="marquee-text">$GM</p>
+                <img src="assets/second.jpg" style="max-width: 80px" loading="lazy" alt="" class="yellow__icon" />
+                <p class="marquee-text">GOOD MORNING</p>
+                <img src="assets/third.jpg" style="max-width: 80px" loading="lazy" alt="" class="yellow__icon" />
+                <p class="marquee-text">$GM</p>
+                <img src="assets/fist.jpg" style="max-width: 80px" loading="lazy" alt="" class="yellow__icon" />
+                <p class="marquee-text">GOOD MORNING</p>
+                <img src="assets/second.jpg" style="max-width: 80px" loading="lazy" alt="" class="yellow__icon" />
+                <p class="marquee-text">$GM</p>
                 <img src="assets/1 (6).jpeg" style="max-width: 80px" loading="lazy" alt="" class="yellow__icon" />
-                <p class="marquee-text">GM</p>
-                <img src="assets/1 (7).jpeg" style="max-width: 80px" loading="lazy" alt="" class="yellow__icon" />
-                <p class="marquee-text">GM</p>
-                <img src="assets/1 (8).jpeg" style="max-width: 80px" loading="lazy" alt="" class="yellow__icon" />
-                <p class="marquee-text">GM</p>
-                <img src="assets/1 (1).jpeg" style="max-width: 80px" loading="lazy" alt="" class="yellow__icon" />
-                <p class="marquee-text">GM</p>
-                <img src="assets/1 (2).jpeg" style="max-width: 80px" loading="lazy" alt="" class="yellow__icon" />
-                <p class="marquee-text">GM</p>
-                <img src="assets/1 (3).jpeg" style="max-width: 80px" loading="lazy" alt="" class="yellow__icon" />
-                <p class="marquee-text">GM</p>
-                <img src="assets/1 (4).jpeg" style="max-width: 80px" loading="lazy" alt="" class="yellow__icon" />
-                <p class="marquee-text">GM</p>
-                <img src="assets/1 (5).jpeg" style="max-width: 80px" loading="lazy" alt="" class="yellow__icon" />
-                <p class="marquee-text">GM</p>
-                <img src="assets/1 (6).jpeg" style="max-width: 80px" loading="lazy" alt="" class="yellow__icon" />
-                <p class="marquee-text">GM</p>
-                <img src="assets/1 (7).jpeg" style="max-width: 80px" loading="lazy" alt="" class="yellow__icon" />
-                <p class="marquee-text">GM</p>
+                <p class="marquee-text">GOOD MORNING</p>
+                <img src="assets/third.jpg" style="max-width: 80px" loading="lazy" alt="" class="yellow__icon" />
+                <p class="marquee-text">$GM</p>
+                <img src="assets/fist.jpg" style="max-width: 80px" loading="lazy" alt="" class="yellow__icon" />
+                <p class="marquee-text">GOOD MORNING</p>
+                <img src="assets/second.jpg" style="max-width: 80px" loading="lazy" alt="" class="yellow__icon" />
+                <p class="marquee-text">$GM</p>
+                <img src="assets/third.jpg" style="max-width: 80px" loading="lazy" alt="" class="yellow__icon" />
+                <p class="marquee-text">GOOD MORNING</p>
+                <img src="assets/fist.jpg" style="max-width: 80px" loading="lazy" alt="" class="yellow__icon" />
+                <p class="marquee-text">$GM</p>
+                <img src="assets/second.jpg" style="max-width: 80px" loading="lazy" alt="" class="yellow__icon" />
+                <p class="marquee-text">GOOD MORNING</p>
+                <img src="assets/third.jpg" style="max-width: 80px" loading="lazy" alt="" class="yellow__icon" />
+                <p class="marquee-text">$GM</p>
+                <img src="assets/fist.jpg" style="max-width: 80px" loading="lazy" alt="" class="yellow__icon" />
+                <p class="marquee-text">GOOD MORNING</p>
+                <img src="assets/second.jpg" style="max-width: 80px" loading="lazy" alt="" class="yellow__icon" />
+                <p class="marquee-text">GOOD MORNING</p>
               </div>
             </div>
           </div>
@@ -818,7 +818,7 @@
                 <div class="slide-one is--1">
                   <div class="card__content">
                     <div class="card__content__left">
-                      <img src="./assets/banimg.png" style="border-radius: 10px" loading="eager" alt=""
+                      <img src="./assets/abt-b.jpg" style="border-radius: 10px" loading="eager" alt=""
                         class="roadmap__image" />
                     </div>
                     <div class="card__content__right">
