--- a/index.html
+++ b/index.html
@@ -1067,7 +1067,7 @@
               <img style="border-radius: 10%; width: 450px;" src="assets/stair.jpg" loading="lazy" alt=""
                 class="image-7" />
             </div>
-            <img src="/assets/1.png" loading="lazy" alt="" class="arrow__image" />
+            <!-- <img src="/assets/1.png" loading="lazy" alt="" class="arrow__image" /> -->
             <div class="follow__content__middle">
               <h1 class="follow__heading__stroke">follow us</h1>
             </div>
